Changed background of search so my eyes will stop bleeding.

--- a/nightmode.scss
+++ b/nightmode.scss
@@ -113,7 +113,8 @@ time._3oh- {
 
 /*Edit your nickname input bg*/
 ._5iwm ._58al {
-  background: darkgray !important;
+  background: $lightgray !important;
+  color: $white !important;
 }
 
 ._23ct {
